--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -8,30 +8,36 @@ library(SignalDetectionTool)
 ```{r parameters}
 if (is.null(params$data)) {
   data <- SignalDetectionTool::input_example
-} else {
-  data <- params$data
-}
+} 
 
 ```
 
 
 # Data and Methods 
 
-- Method used: `r params$algo`
-- Date range used for training the model: `r params$training_range[1]` to `r params$training_range[2]`
-- Date range for the analysis: `r params$analysis_range[1]` to `r params$analysis_range[2]`
-- Other configurations used for the model 
+- Method used: `r names(params$algo)`
+- Length of signal detection period: `r params$number_of_weeks` weeks
+- Strata selected: `r paste(params$strata, collapse = ", ")`
 
-TODO: Possible inclusion of a method description. 
 
 ```{r}
+
 results <- get_signals(data, 
+                       date_var = "date_report",
+                       number_of_weeks = params$number_of_weeks,
                        method = params$algo)
 
-if (!is.null(strata)) {
+
+
+if (!is.null(strata) & is.null(params$signals_agg)) {
   results_strata <- get_signals(data, 
-                              method = params$algo, 
-                              stratification = params$strata)
+                                method = params$algo, 
+                                stratification = params$strata,
+                                number_of_weeks = params$number_of_weeks)
+  signals_agg <- aggregate_signals(results_strata, 
+                                   number_of_weeks = params$number_of_weeks)
+} else if (!is.null(strata)) {
+  signals_agg <- params$signals_agg
 }
 
 
@@ -45,21 +51,22 @@ results_analysis <- results %>%
   dplyr::filter(!is.na(alarms))
 
 stringr::str_glue(
-  "In the analysis period {params$training_range[1]} - {params$training_range[2]} ", 
+  "In the signal detection period - last {params$number_of_weeks} weeks available in the data - ", 
   "there where {sum(results_analysis$cases)} cases of {params$disease} in {params$country}. ",
   "Using the {params$algo} algorithm {sum(results_analysis$alarm)} signals where detected.")
 ```
 
 
 ```{r}
-#| fig.cap=paste0("Number of ", params$disease, " cases by week and signals, ", params$country)
-plot_time_series(results, 
-                 number_of_weeks = params$weeks,
+#| fig.cap=paste0("Number of ", params$disease, " cases by week and signals, ", params$country),
+#| out.width="100%"
+plot_time_series(results,
                  interactive = params$interactive)
 ```
 
 ```{r}
-create_results_table(results, interactive = params$interactive)
+# Waiting for bug fix 
+#create_results_table(results, interactive = params$interactive)
 ```
 
 
