--- a/inst/report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/SignalDetectionReport_strata.Rmd
@@ -49,8 +49,8 @@ plot_time_series(df,
 ```
 
 
-```{r, eval = params$tables}
-#| eval=sum(df$alarms, na.rm = TRUE) != 0
+```{r}
+#| eval=sum(df$alarms, na.rm = TRUE) != 0 & params$tables
 create_results_table(df, 
                      interactive = params$interactive)
 ```
