update: only include table of alarms where found

--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -65,6 +65,7 @@ plot_time_series(results,
 ```
 
 ```{r}
+#| eval=sum(results$alarms, na.rm = TRUE) != 0
 create_results_table(results, interactive = params$interactive)
 ```
 
