- adding method and number_of_weeks as columns to the result of get_signals() and removing these parameters from multiple tabs and the report as they can be generated from the signa-results dataframe - renaming of multiple objects such as data_filtered everywhere to make code clearer

--- a/inst/report/SignalDetectionReport.Rmd
+++ b/inst/report/SignalDetectionReport.Rmd
@@ -23,12 +23,10 @@ params:
   data: NULL
   disease: "Pertussis"
   country: "Austria"
-  number_of_weeks: 6
-  algo: "farrington"
   strata: !r c("county_id", "community_id", "sex", "age_group") 
   interactive: false
   tables: true
-  signal_results: NULL
+  signals_padded: NULL
   signals_agg: NULL
 
 ---
