--- a/inst/report/SignalDetectionReport.Rmd
+++ b/inst/report/SignalDetectionReport.Rmd
@@ -23,6 +23,8 @@ params:
   data: NULL
   disease: "Pertussis"
   country: "Austria"
+  number_of_weeks: 6
+  algo: "farrington"
   strata: !r c("county_id", "community_id", "sex", "age_group") 
   interactive: false
   tables: true
