--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -81,10 +81,7 @@ txt <- NULL
 if (sum(results_analysis$alarms, na.rm = TRUE) != 0) {
   format <- ifelse(params$interactive, "DataTable", "Flextable")
   build_signals_table(signals_padded %>% 
-                       dplyr::filter(is.na(category)) %>% 
-                       dplyr::select(-upperbound_pad, 
-                                     -expected_pad, 
-                                     -first_alarm_nonNA), 
+                       dplyr::filter(is.na(category)), 
                      format = format)
 } else {
   txt <- "No signals were detected."
