--- a/inst/report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/SignalDetectionReport_strata.Rmd
@@ -98,10 +98,7 @@ for (i in seq_len(pages)) {
 
 if (sum(df$alarms, na.rm = TRUE) != 0) {
   format <- ifelse(params$interactive, "DataTable", "Flextable")
-  build_signals_table(df %>% 
-                       dplyr::select(-upperbound_pad, 
-                                     -expected_pad, 
-                                     -first_alarm_nonNA), 
+  build_signals_table(df, 
                      format = format)
 } else {
   txt <- "No signals were detected."
