--- a/inst/rmd/help_tab.Rmd
+++ b/inst/rmd/help_tab.Rmd
@@ -1,7 +1,23 @@
 ---
 output: 
-  html_document
+  html_document:
+    toc: true
 ---
+
+```{r, echo=FALSE}
+knitr::opts_chunk$set(eval = TRUE, 
+                      echo = FALSE, 
+                      fig.align = 'center',
+                      fig.width = 13,
+                      fig.height = 5,
+                      message = FALSE, 
+                      warning = FALSE)
+```
+
+```{r libraries}
+library(dplyr)
+library(flextable)
+```
 
 ## Introduction
 This tab is meant to help, guide and assist you in any issues or questions that might arise while using the SignalDetectionTool app. It will cover the background and purpose of the tool, guide you through the different options and functionalities provided, as well as a contact point for you to report any bugs found while using the tool.
@@ -54,86 +70,63 @@ Depending on the number of weeks you want to generate signals for, and the filte
 
 In the following we call the training period the time period which is used to fit the parameters of the algorithms. This time period is given by your selection of date_report (Filters section) and the Signal detection period. If you select the time period 01-01-2020 until 31-12-2021 in the Filters section and select six weeks for the signal detection period the training period will be from 01-01-2020 until 22-11-2021 (six weeks before 31-12-2021). If you do not set any filter for date_report in the Filters section then the full time period of your dataset minus the Signal Detection Period will be used to fit the parameters.
 
-Which signal detection algorithm should you choose? It depends on multiple criteria, and they all have their individual weaknesses and strengths.  
+Which signal detection algorithm should you choose? It depends on multiple criteria, and they all have their individual weaknesses and strengths. The table below provides an overview of key characteristics, presented in the same order as the algorithms appear in the app's dropdown menu. A 'Yes' under 'Time trend' indicates that the selected signal detection method can model a time trend in the data. A 'Yes' under 'Seasonality' indicates that the signal detection method accounts for seasonal variations in case numbers. The minimum amount of historical data required varies by method. In particular, methods that model seasonality demand more historical data to accurately estimate seasonal patterns. As noted above, the app automatically determines which methods can be applied based on the amount of historical data available in your dataset and only shows you those.
+
+```{r}
+algorithms_overview <- readxl::read_excel(system.file("extdata", "help_algorithms.xlsx", package = "SignalDetectionTool"))
+flextable(algorithms_overview) %>% 
+  bold(part = "header") %>% 
+  vline(part = "all") %>% 
+  border_outer() %>% 
+  autofit()
+```
+
+For more details about the individual algorithms we recommend to read the texts below. 
 
 **CUSUM**
-- does not model time trend
-- does not model seasonality
-- cusum can compute the baseline theoretically on only one time point in the past but for a good baseline more historic data should be used
 
 CUSUM (cumulative sum) is an algorithm which detects shifts in the mean of a time series. It accumulates deviations of the observed case counts from the mean case count and once this accumulation has reached a value above a defined tolerance a signal is triggered. After a signal was triggered the cumulative sum is set to zero and the algorithm restarts. As CUSUM accumulates the deviations over time it is more sensitive to small and moderate shifts in the case count. The mean case count is computed on all case counts of the training period. CUSUM does not account for seasonality as it just computes a mean over all case counts.  
 CUSUM was originally developed by E. S. Page and typically used in industry for monitoring change detection. Rossi et al. (1999) serves as reference in the public health context. 
 
 **FarringtonFlexible**  
 
-- models time trend
-- models seasonality
-- needs more historic data (78 time points) to compute a baseline
-
 The FarringtonFlexible uses a generalised linear model (GLM) to model the observed case count. In addition to a time trend terms for seasonality are also included in this model. For the computation of the baseline past very high case counts (potential outbreaks) are downweighted so that they don't shift the baseline upwards. Furthermore the past 26 time points before the current time point are excluded from the baseline to avoid reducing sensitivity when an outbreak has recently started before the current time point. The algorithm needs at least 78 time points (1.5 years when time points are weeks) of data in the past to calibrate the baseline.  
 FarringtonFlexible (Noufaily et al. 2012) is an improved version of the classic Farrington algorithm (Farrington et al. 1996). In this tool the implementation from the R package surveillance is used which is illustrated in Salmon et al. (2016).
 
 **EARS**  
-
-- does not model time trend
-- does not model seasonality
-- needs only 7 time points of historic data 
 
 The EARS (Early Aberration Reporting System) algorithm uses a window-based approach for outbreak detection. For the EARS C1 algorithm implemented in this tool mean and standard deviation are computed from the cases observed in the last 7 time points before the current time point. These parameters are used to compute a threshold based on the quantiles of the normal distribution. When the observed case count is above the computed threshold a signal is raised. Because of the short time interval considered, EARS does not take into account seasonality and time trends. The baseline is computed using only the last 7 time points.  
 EARS was developed by CDC and published in Hutwagner et al. (2003). 
 
 **Mean**  
 
-- does not model time trend
-- does not model seasonality
-- needs at least one year of historic data
-
 This method calculates the mean of all previous case counts while downweighting past outbreaks, ensuring that the mean remains unbiased by previous high case counts. This mean serves as the expected value for the current number of cases. A threshold is then determined using a prediction interval derived from the mean, applying either a Poisson or negative binomial distribution. The choice of distribution is based on the fitted dispersion of the data.
 
 **Timetrend** 
-
-- models time trend
-- does not model seasonality
-- needs at least two years of historic data
 
 This method models the expected number of cases by a regression with an intercept and a timetrend. It uses all the full previous data to fit the regression. It downweighting past outbreaks, ensuring that the fitted expected number of cases remains unbiased by previous high case counts. A threshold is then determined using a prediction interval derived from the mean, applying either a Poisson or negative binomial distribution. The choice of distribution is based on the fitted dispersion of the data.
 
 **Harmonic**  
 
-- does not model time trend
-- models seasonality
-- needs at least two years of historic data
-
 This method models the expected number of cases using a harmonic sin-cos regression that includes an intercept but no timetrend. The harmonic sin-cos wave elements are used to model seasonality which occurs in the data. The model is fitted using all available historical data while downweighting past outbreaks to ensure that the estimated expected number of cases is not biased by previous high case counts. A threshold is then determined using a prediction interval derived from the model's mean, applying either a Poisson or negative binomial distribution. The choice of distribution is based on the fitted dispersion of the data.
 
 **Harmonic with timetrend**  
-
-- models time trend
-- models seasonality
-- needs at least three years of historic data
 
 The same as the **Harmonic** method but with fitting a timetrend to account for the underlying trend in the data.
 
 
 **Step harmonic**  
 
-- does not model time trend
-- models seasonality
-- needs at least four years of historic data
-
 This method models the expected number of cases using the season groups defined in the Farrington outbreak detection algorithm. The year is divided into 10 seasonal windows, each with a constant expected case count within its respective season group. This approach offers flexibility in capturing seasonal patterns, such as a faster decline following a rise, but it requires more data for accurate fitting. The regression model also includes an intercept. The model is fitted using all available historical data, with past outbreaks downweighted to ensure that the estimated expected number of cases remains unbiased by previous high case counts. A threshold is then determined using a prediction interval derived from the model's mean, applying either a Poisson or negative binomial distribution, depending on the fitted dispersion of the data.
 
 **Step harmonic with timetrend**  
 
-- models time trend
-- models seasonality
-- needs at least four years of historic data
-
 The same as the **Step harmonic** method but with fitting a timetrend to account for the underlying trend in the data.
 
-**Covid19 Pandemic correction**  
+#### Covid19 Pandemic correction
 
-The "Pandemic Correction" feature, accessible via an additional button, applies an interrupted time series analysis to the outbreak detection methods. In the Mean model, separate means are fitted for the periods before and after the selected intervention date. For models that include a time trend, both the intercept and time trend can differ following the intervention. However, the seasonality components are fitted across the entire time period and are not adjusted based on the intervention date.
+The "Covid19 Pandemic Correction" feature, accessible via an additional button, applies an interrupted time series analysis to the outbreak detection methods. It is possible to apply the correction to the following algorithms: Mean, Timetrend, Harmonic, Harmonic with timetrend, Step harmonic, Step harmonic with timetrend.  
+In the Mean model, separate means are fitted for the periods before and after the selected intervention date. For models that include a time trend, both the intercept and time trend can differ following the intervention. However, the seasonality components are fitted across the entire time period and are not adjusted based on the intervention date.
 This approach allows you to model changes in case counts, such as a decline due to the pandemic, and to capture a different time trend that may emerge afterward. A critical assumption behind these models is that the current case counts are represented by the model applied after the intervention, meaning it models the case counts which occured during and following the pandemic.
 
 ### Signals tab
