add a dashed vertical line in plot_time_series to mark the intervention. Add this to the signals tab and the report.

--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -70,6 +70,7 @@ stringr::str_glue(
 #| out.width="100%"
 plot_time_series(signals_padded %>% 
                    dplyr::filter(is.na(category)),
+                 intervention_date = params$intervention_date,
                  interactive = params$interactive)
 ```
 
