--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -14,36 +14,43 @@ if (is.null(params$data)) {
 
 # Data and Methods 
 
-- Method used: `r names(available_algorithms()[which(available_algorithms() == params$algo)])`
+- Method used: `r names(available_algorithms()[which(available_algorithms() == params$method)])`
 - Length of signal detection period: `r params$number_of_weeks` weeks
 - Strata selected: `r paste(params$strata, collapse = ", ")`
 
 
 ```{r}
-
-if (!is.null(params$signals_padded)) {
+if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
+  signals_agg <- params$signals_agg
   signals_padded <- params$signals_padded
 } else {
-  signal_results <- get_signals(data, 
-                                stratification = strata,
-                                method = params$algo, 
+  data_preprocessed <- preprocess_data(data)
+  signal_results <- get_signals(data_preprocessed, 
+                                stratification = NULL,
+                                method = params$method, 
                                 number_of_weeks = params$number_of_weeks)
-  signals_padded <- pad_signals(data,
-                                signal_results)
-
-}
-
-
-
-if (!is.null(params$strata) & is.null(params$signals_agg)) {
-  results_strata <- get_signals(data, 
-                                method = params$algo, 
-                                stratification = params$strata,
-                                number_of_weeks = params$number_of_weeks)
-  signals_agg <- aggregate_signals(results_strata, 
-                                   number_of_weeks = params$number_of_weeks)
-} else if (!is.null(params$strata)) {
-  signals_agg <- params$signals_agg
+  
+  if (!is.null(params$strata)) {
+    signal_results_stratified  <- get_signals(
+      data_preprocessed, 
+      stratification = params$strata,
+      method = params$method, 
+      number_of_weeks = params$number_of_weeks) 
+    
+    signal_results <- signal_results %>% 
+      dplyr::bind_rows(signal_results_stratified)
+    
+    signals_agg <- aggregate_signals(signal_results_stratified, 
+                                     number_of_weeks = params$number_of_weeks)
+  }
+  
+  if (grepl("glm", params$method)) {
+    signals_padded <- signal_results
+  } else {
+    signals_padded <- pad_signals(data_preprocessed,
+                                  signal_results)
+  }
+  
 }
 
 
@@ -61,7 +68,7 @@ results_analysis <- signals_padded %>%
 stringr::str_glue(
   "In the signal detection period - last {params$number_of_weeks} weeks available in the data - ", 
   "there were {sum(results_analysis$cases)} cases of {params$disease} in {params$country}. ",
-  "Using the {names(params$algo)} algorithm {sum(results_analysis$alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} {ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')} detected.")
+  "Using the {names(params$method)} algorithm {sum(results_analysis$alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} {ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')} detected.")
 ```
 
 
