--- a/inst/report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/SignalDetectionReport_strata.Rmd
@@ -14,7 +14,7 @@ results_analysis <- signals_agg %>%
                 category %in% strat)
 
 stringr::str_glue(
-  "When stratifying by {strat_text}, the {names(params$algo)} algorithm detects ", 
+  "When stratifying by {strat_text}, the {names(params$method)} algorithm detects ", 
   "{sum(results_analysis$n_alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} in the signal detection period.")
 ```
 
@@ -29,7 +29,8 @@ decider_barplot_map_table(signals_agg,
 
 ```{r}
 df <- signals_padded %>% 
-  dplyr::filter(category %in% strat)
+  dplyr::filter(category %in% strat) %>% 
+  create_factor_with_unknown()
 
 number_stratum <- dplyr::n_distinct(df$stratum)
 
@@ -53,15 +54,19 @@ txt <- NULL
 #| fig.cap=paste0("Number of ", params$disease, " cases by week and signals stratified by ", strat_text, ", ", params$country),
 #| fig.dim = c(8, number_stratum),
 #| fig.fullwidth=TRUE
+
 plot_time_series(df,
                  number_of_weeks = 52,
                  intervention_date = params$intervention_date,
                  interactive = FALSE) +
-  ggplot2::facet_wrap(~stratum, ncol = 2, scales = "free_y") +
+  ggplot2::facet_wrap(~stratum, 
+                      ncol = 2, 
+                      scales = "free_y", 
+                      drop = FALSE) +
   ggplot2::scale_x_date(
-        date_breaks = "2 months", date_labels = "%Y-%m-%d",
-        expand = c(0, 0)
-      )
+    date_breaks = "2 months", date_labels = "%Y-%m-%d",
+    expand = c(0, 0)
+  )
 
 ```
 
@@ -73,18 +78,19 @@ plot_time_series(df,
 
 for (i in seq_len(pages)) {
   p <- plot_time_series(df,
-                 number_of_weeks = 52,
-                 intervention_date = params$intervention_date,
-                 interactive = FALSE) + 
-  ggforce::facet_wrap_paginate(~stratum, 
-                               ncol = 2, 
-                               nrow = 6, 
-                               scales = "free_y",
-                               page = i) +
-  ggplot2::scale_x_date(
-        date_breaks = "2 months", date_labels = "%Y-%m-%d",
-        expand = c(0, 0)
-      )
+                        number_of_weeks = 52,
+                        intervention_date = params$intervention_date,
+                        interactive = FALSE) + 
+    ggforce::facet_wrap_paginate(~stratum, 
+                                 ncol = 2, 
+                                 nrow = 6, 
+                                 scales = "free_y",
+                                 page = i, 
+                                 drop = FALSE) +
+    ggplot2::scale_x_date(
+      date_breaks = "2 months", date_labels = "%Y-%m-%d",
+      expand = c(0, 0)
+    )
   
   print(p)
 }
