--- a/inst/report/SignalDetectionReport_body.Rmd
+++ b/inst/report/SignalDetectionReport_body.Rmd
@@ -8,7 +8,7 @@ library(SignalDetectionTool)
 ```{r parameters}
 if (is.null(params$data)) {
   data <- SignalDetectionTool::input_example
-} 
+}
 ```
 
 
@@ -25,63 +25,70 @@ if (!is.null(params$signals_padded) & !is.null(params$signals_agg)) {
   signals_agg <- params$signals_agg
   signals_padded <- params$signals_padded
 } else {
-  data_preprocessed <- preprocess_data(data)
-  signal_results <- get_signals(data_preprocessed, 
-                                stratification = NULL,
-                                method = params$method, 
-                                number_of_weeks = params$number_of_weeks, 
-                                intervention_date = params$intervention_date)
-  
+  data_preprocessed <- SignalDetectionTool::preprocess_data(data)
+  signal_results <- SignalDetectionTool::get_signals(data_preprocessed,
+    stratification = NULL,
+    method = params$method,
+    number_of_weeks = params$number_of_weeks,
+    intervention_date = params$intervention_date
+  )
+
   if (!is.null(params$strata)) {
-    signal_results_stratified  <- get_signals(
-      data_preprocessed, 
+    signal_results_stratified <- SignalDetectionTool::get_signals(
+      data_preprocessed,
       stratification = params$strata,
-      method = params$method, 
-      number_of_weeks = params$number_of_weeks, 
-      intervention_date = params$intervention_date) 
-    
-    signal_results <- signal_results %>% 
+      method = params$method,
+      number_of_weeks = params$number_of_weeks,
+      intervention_date = params$intervention_date
+    )
+
+    signal_results <- signal_results %>%
       dplyr::bind_rows(signal_results_stratified)
-    
-    signals_agg <- aggregate_signals(signal_results_stratified, 
-                                     number_of_weeks = params$number_of_weeks)
+
+    signals_agg <- SignalDetectionTool::aggregate_signals(signal_results_stratified,
+      number_of_weeks = params$number_of_weeks
+    )
   }
-  
+
   if (grepl("glm", params$method)) {
     signals_padded <- signal_results
   } else {
-    signals_padded <- pad_signals(data_preprocessed,
-                                  signal_results)
+    signals_padded <- SignalDetectionTool::pad_signals(
+      data_preprocessed,
+      signal_results
+    )
   }
-  
 }
-
-
 ```
 
 
 # Signal Detection 
 
 ```{r, results='asis'}
-results_analysis <- signals_padded %>% 
-  dplyr::filter(is.na(category), 
-                !is.na(alarms))
+results_analysis <- signals_padded %>%
+  dplyr::filter(
+    is.na(category),
+    !is.na(alarms)
+  )
 
 
 stringr::str_glue(
-  "In the signal detection period - last {params$number_of_weeks} weeks available in the data - ", 
+  "In the signal detection period - last {params$number_of_weeks} weeks available in the data - ",
   "there were {sum(results_analysis$cases)} cases of {params$disease} in {params$country}. ",
-  "Using the {names(params$method)} algorithm {sum(results_analysis$alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} {ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')} detected.")
+  "Using the {names(params$method)} algorithm {sum(results_analysis$alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} {ifelse(sum(results_analysis$n_alarms) == 1, ' was', ' were')} detected."
+)
 ```
 
 
 ```{r}
 #| fig.cap=paste0("Number of ", params$disease, " cases by week and signals, ", params$country),
 #| out.width="100%"
-plot_time_series(signals_padded %>% 
-                   dplyr::filter(is.na(category)),
-                 intervention_date = params$intervention_date,
-                 interactive = params$interactive)
+SignalDetectionTool::plot_time_series(
+  signals_padded %>%
+    dplyr::filter(is.na(category)),
+  intervention_date = params$intervention_date,
+  interactive = params$interactive
+)
 ```
 
 ## Signal Detection Table
@@ -91,20 +98,18 @@ txt <- NULL
 
 if (sum(results_analysis$alarms, na.rm = TRUE) != 0) {
   format <- ifelse(params$interactive, "DataTable", "Flextable")
-  build_signals_table(signals_padded %>% 
-                       dplyr::filter(is.na(category)), 
-                     format = format)
+  SignalDetectionTool::build_signals_table(
+    signals_padded %>%
+      dplyr::filter(is.na(category)),
+    format = format
+  )
 } else {
   txt <- "No signals were detected."
 }
-
-
 ```
 
 ```{r, results='asis'}
 #|eval = is.character(txt)
 
 cat(txt)
-
 ```
-
