--- a/inst/report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/SignalDetectionReport_strata.Rmd
@@ -1,51 +1,53 @@
 
 ```{r}
-strat_text <- dplyr::case_when(strat == "age_group" ~ "agegroup",
-                               TRUE ~ strat)
-
+strat_text <- dplyr::case_when(
+  strat == "age_group" ~ "agegroup",
+  TRUE ~ strat
+)
 ```
 
 
 ## Signals stratified by `r strat_text`
 
 ```{r, results='asis'}
-results_analysis <- signals_agg %>% 
-  dplyr::filter(any_alarms, 
-                category %in% strat)
+results_analysis <- signals_agg %>%
+  dplyr::filter(any_alarms, category %in% strat)
 
 stringr::str_glue(
-  "When stratifying by {strat_text}, the {names(params$method)} algorithm detects ", 
-  "{sum(results_analysis$n_alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} in the signal detection period.")
+  "When stratifying by {strat_text}, the {names(params$method)} algorithm detects ",
+  "{sum(results_analysis$n_alarms)} signal{ifelse(sum(results_analysis$n_alarms) == 1, '', 's')} in the signal detection period."
+)
 ```
 
 ```{r}
 #| fig.cap=paste0("Number of ", params$disease, " cases and signals stratified by ", strat_text, ", ", params$country),
 #| out.width="100%"
-decider_barplot_map_table(signals_agg, 
-                          data, 
-                          strat,
-                          interactive = params$interactive)
+SignalDetectionTool:::decider_barplot_map_table(
+  signals_agg,
+  data,
+  strat,
+  interactive = params$interactive
+)
 ```
 
 ```{r}
-df <- signals_padded %>% 
-  dplyr::filter(category %in% strat) %>% 
-  create_factor_with_unknown()
+df <- signals_padded %>%
+  dplyr::filter(category %in% strat) %>%
+  SignalDetectionTool:::create_factor_with_unknown()
 
 number_stratum <- dplyr::n_distinct(df$stratum)
 
 if (number_stratum <= 10) {
-  p_height <- ceiling(dplyr::n_distinct(df$stratum)/2) * 2
+  p_height <- ceiling(dplyr::n_distinct(df$stratum) / 2) * 2
 } else {
-  p_height <- 12 
+  p_height <- 12
 }
 
-pages <- ceiling(number_stratum/12)
+pages <- ceiling(number_stratum / 12)
 format <- knitr::opts_knit$get("rmarkdown.pandoc.to")
 eval_paginate <- !grepl("html", format, ignore.case = TRUE)
 
 txt <- NULL
- 
 ```
 
 
@@ -56,18 +58,19 @@ txt <- NULL
 #| fig.fullwidth=TRUE
 
 plot_time_series(df,
-                 number_of_weeks = 52,
-                 intervention_date = params$intervention_date,
-                 interactive = FALSE) +
-  ggplot2::facet_wrap(~stratum, 
-                      ncol = 2, 
-                      scales = "free_y", 
-                      drop = FALSE) +
+  number_of_weeks = 52,
+  intervention_date = params$intervention_date,
+  interactive = FALSE
+) +
+  ggplot2::facet_wrap(~stratum,
+    ncol = 2,
+    scales = "free_y",
+    drop = FALSE
+  ) +
   ggplot2::scale_x_date(
     date_breaks = "2 months", date_labels = "%Y-%m-%d",
     expand = c(0, 0)
   )
-
 ```
 
 ```{r, results='asis'}
@@ -78,24 +81,24 @@ plot_time_series(df,
 
 for (i in seq_len(pages)) {
   p <- plot_time_series(df,
-                        number_of_weeks = 52,
-                        intervention_date = params$intervention_date,
-                        interactive = FALSE) + 
-    ggforce::facet_wrap_paginate(~stratum, 
-                                 ncol = 2, 
-                                 nrow = 6, 
-                                 scales = "free_y",
-                                 page = i, 
-                                 drop = FALSE) +
+    number_of_weeks = 52,
+    intervention_date = params$intervention_date,
+    interactive = FALSE
+  ) +
+    ggforce::facet_wrap_paginate(~stratum,
+      ncol = 2,
+      nrow = 6,
+      scales = "free_y",
+      page = i,
+      drop = FALSE
+    ) +
     ggplot2::scale_x_date(
       date_breaks = "2 months", date_labels = "%Y-%m-%d",
       expand = c(0, 0)
     )
-  
+
   print(p)
 }
-
-
 ```
 
 
@@ -106,13 +109,12 @@ for (i in seq_len(pages)) {
 
 if (sum(df$alarms, na.rm = TRUE) != 0) {
   format <- ifelse(params$interactive, "DataTable", "Flextable")
-  build_signals_table(df, 
-                     format = format)
+  SignalDetectionTool::build_signals_table(df,
+    format = format
+  )
 } else {
   txt <- "No signals were detected."
 }
-
-
 ```
 
 ```{r}
@@ -120,7 +122,4 @@ if (sum(df$alarms, na.rm = TRUE) != 0) {
 #|eval= params$tables & is.character(txt)
 
 cat(txt)
-
 ```
-
-
