really last change of adding one sentence to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,6 +47,7 @@ Another way to install the tool is downloading the appropriate file found under 
       <ul>
         <li>Scroll up and look on the right-hand side of the page under a section labelled <strong>Releases</strong>.</li>
         <li>Click on <strong>Releases</strong> to access the latest tool release.</li>
+        <li>There are three different files you can download.</li>
       </ul>
     </li>
     <br>
