--- a/vignettes/SignalDetectionTool.Rmd
+++ b/vignettes/SignalDetectionTool.Rmd
@@ -64,7 +64,6 @@ This is an example for signals generated using the default paramters with Farrin
 ```{r}
 data_prepro <- input_example %>% preprocess_data()
 signals <- data_prepro %>% get_signals()
-
 ```
 
 The generated `signals` output is a data.frame containing the aggregated number of cases per week with additional columns `cases_in_outbreak`, `alarms`, `upperbound`, `expected`, `category`, `stratum`, `method` and `number_of_weeks`.  
@@ -83,9 +82,10 @@ The generated `signals` output is a data.frame containing the aggregated number 
 Generating stratified signals using EARS:
 ```{r}
 data_prepro <- input_example %>% preprocess_data()
-signals_ears_stratified <- data_prepro %>% get_signals(method = "ears",
-                                       stratification = c("age_group","county"))
-
+signals_ears_stratified <- data_prepro %>% get_signals(
+  method = "ears",
+  stratification = c("age_group", "county")
+)
 ```
 
 The `signals_ears_stratified` output is a data frame in long format, containing multiple time series of weekly aggregated case counts. Each time series corresponds to a unique combination of the specified stratification variables, with all strata stacked vertically.  
@@ -112,15 +112,17 @@ Coming soon...
 You can directly generate an HTML or Word report containing signal results and visualizations using `run_report()`. Simply pass your surveillance linelist—structured according to the format defined in `input_metadata`—to `run_report()`. The data will be preprocessed automatically within the function. The following code chunk generates a Word report using EARS without any stratification (default) for the past six weeks (default):
 ```{r, eval=FALSE}
 run_report(input_example,
-           report_format = "DOCX",
-           method = "EARS")
+  report_format = "DOCX",
+  method = "EARS"
+)
 ```
 
 This generates an HTML report (default) with stratification by age group, county and sex for the last 2 weeks using FarringtonFlexible (default):
 ```{r, eval=FALSE}
 run_report(input_example,
-           strata = c("age_group","county","sex"),
-           number_of_weeks = 2)
+  strata = c("age_group", "county", "sex"),
+  number_of_weeks = 2
+)
 ```
 
 
